--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.545.0",
     "meshline": "^3.3.1",
     "motion": "^12.23.22",
